@@ -47,7 +47,7 @@ public class TestValueClasses extends JavadocTester {
     private final ToolBox tb = new ToolBox();
 
     @Test
-    public void testValueClassModifiers(Path base) throws IOException {
+    public void testConcreteValueClass(Path base) throws IOException {
         Path src = base.resolve("src");
         tb.writeJavaFiles(src,
                 "package p; public value class ValueClass {}");
@@ -65,6 +65,42 @@ public class TestValueClasses extends JavadocTester {
     }
 
     @Test
+    public void testAbstractValueClass(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src,
+                "package p; public abstract value class ValueClass {}");
+
+        javadoc("-d", base.resolve("out").toString(),
+                "--enable-preview", "-source", String.valueOf(Runtime.version().feature()),
+                "-sourcepath", src.toString(),
+                "p");
+        checkExit(Exit.OK);
+
+        checkOutput("p/ValueClass.html", true,
+                """
+                <div class="type-signature"><span class="modifiers">public abstract value class </span><span class="element-name type-name-label">ValueClass</span>
+                """);
+    }
+
+    @Test
+    public void testValueRecord(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src,
+                "package p; public value record ValueRecord() {}");
+
+        javadoc("-d", base.resolve("out").toString(),
+                "--enable-preview", "-source", String.valueOf(Runtime.version().feature()),
+                "-sourcepath", src.toString(),
+                "p");
+        checkExit(Exit.OK);
+
+        checkOutput("p/ValueRecord.html", true,
+                """
+                <div class="type-signature"><span class="modifiers">public value record </span><span class="element-name type-name-label">ValueRecord</span>()
+                """);
+    }
+
+    @Test
     public void testImplicitConstModifiers(Path base) throws IOException {
         Path src = base.resolve("src");
         tb.writeJavaFiles(src,
@@ -77,6 +113,7 @@ public class TestValueClasses extends JavadocTester {
                 """);
 
         javadoc("-d", base.resolve("out").toString(),
+                "--enable-preview", "-source", String.valueOf(Runtime.version().feature()),
                 "-sourcepath", src.toString(),
                 "-XDenableNullRestrictedTypes",
                 "p");
