@@ -24,11 +24,10 @@
 /**
  * @test
  * @bug 8208067
+ * @compile --enable-preview -source ${jdk.version} -XDenableNullRestrictedTypes CanonicalCtorTest.java
  * @summary Verify that instance methods are callable from ctor after all instance fields are DA.
- * @ignore
  */
 
-// see JDK-8316628
 public value class CanonicalCtorTest {
 
     private final int x, ymx;
@@ -40,7 +39,8 @@ public value class CanonicalCtorTest {
         ymx = y - x;
         this.x = x;
 
-        // ALL fields are assigned now.
+        // all fields are assigned now, but we need a explicit `super()` invocation before accessing `this`
+        super();
 
         validate();                 // OK: DU = {}
         this.validate();            // OK: DU = {}
